sort.basic.selection.AlgSelectionSort.scala.error
Compilation error:
AlgSelectionSort:6: error: ')' expected but $XMLSTART$< found.
  while (N != n-1 && minj <n-1){
                          ^AlgSelectionSort:14: error: illegal start of simple expression
} 
^